uodated play book package module

--- a/1-learning.yaml
+++ b/1-learning.yaml
@@ -3,4 +3,8 @@
   tasks :
     - name : testing connection
       ping :
-      
+    - name : update packages
+      yum :
+       - name : '*'
+         state : update
+         
